establishing channel success

--- a/data/new/history
+++ b/data/new/history
@@ -144,3 +144,69 @@ eth.getCode("0x74DD27a41b01EB8B05630D256Eec6FE06e1ADE96")
 web3.fromWei(eth.getBalance("0x54815331329231c32af78f145fe7719f56cedd2c"), "ether")
 web3.fromWei(eth.getBalance("d782846075fa462654e4457d9643381f439425dd"), "ether")
 web3.fromWei(eth.getBalance("0xd782846075fa462654e4457d9643381f439425dd"), "ether")
+eth.coinbase
+web3.fromWei(eth.getBalance("0x1a3d0c6c135c10318e1eaffff2aef675d50453c6"), "ether")
+miner.start()
+web3.fromWei(eth.getBalance("0x1a3d0c6c135c10318e1eaffff2aef675d50453c6"), "ether")
+eth.getCode("0x745a8d1610D4AC940350221F569338E4C93b1De6")
+eth.getCode("0x1f84d64484132670D07605e9D5BC2F062F907e52")
+web3.fromWei(eth.getBalance("0x1a3d0c6c135c10318e1eaffff2aef675d50453c6"), "ether")
+web3.fromWei(eth.getBalance("0xc676cadc3c683612d4712d80aa6851205830e48e"), "ether")
+web3.fromWei(eth.getBalance("0x96216849c49358B10257cb55b28eA603c874b05E"), "ether")
+web3.fromWei(eth.getBalance("0xc676cadc3c683612d4712d80aa6851205830e48e"), "ether")
+web3.fromWei(eth.getBalance("0x6a415420c14ba52538389e5108d23c228ad36c9f"), "ether")
+web3.fromWei(eth.getBalance("0xc676cadc3c683612d4712d80aa6851205830e48e"), "ether")
+web3.fromWei(eth.getBalance("0x6a415420c14ba52538389e5108d23c228ad36c9f"), "ether")
+web3.fromWei(eth.getBalance("0xc676cadc3c683612d4712d80aa6851205830e48e"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0x37e24b19a430043c27c9432b615873cfb857f063"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+web3.fromWei(eth.getBalance("0xb309f586989d91ade62829176b985a4d79dfe161"), "ether")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+eth.getCode("0x1f84d64484132670D07605e9D5BC2F062F907e52")
+web3.fromWei(eth.getBalance("0x43cd50c2de28ca500634636fda7d095821eec64a"), "ether")
+eth.getCode("0x9E07676093249C5D643d88Eb0C5688Fb8Ac8167c")
+eth.getCode("0x96216849c49358B10257cb55b28eA603c874b05E")
+eth.getCode("0x9E07676093249C5D643d88Eb0C5688Fb8Ac8167c")
+eth.getCode("0x20c56c8F33E2Bb2F48321F7619E7D916cC8e3363")
+eth.getCode("0x1f84d64484132670D07605e9D5BC2F062F907e52")
+eth.getCode("0xDC7a78964E79bB0608A1B7844E5910d3Cd0C7132")
+eth.getBlock('17289')
+eth.getTransaction("0x0523e9f645c408177033def27cf2e88b53de86bf0d55d07a391925e0206d62b7")
+eth.getCode("0x20c56c8F33E2Bb2F48321F7619E7D916cC8e3363")
+eth.getCode("0xDC7a78964E79bB0608A1B7844E5910d3Cd0C7132")
+miner.stop()
+eth.getCode("0x86e2D613CFE6614d73E7E489761D90681DA18224")
+miner.start()
+eth.getCode("0x86e2D613CFE6614d73E7E489761D90681DA18224")
+eth.getCode("0xe458C25430A184C01EA651f7dDC7D157E26113EF")
+eth.getCode("0x00f4befBd242a7e0C2bD2D41F577c90eDC957137")
+eth.getCode("0xC52cA8159E17Fb54A8F259B07B8137Ae09a83029")
+0xC52cA8159E17Fb54A8F259B07B8137Ae09a83029
+eth.getCode("0xC52cA8159E17Fb54A8F259B07B8137Ae09a83029")
+0xC52cA8159E17Fb54A8F259B07B8137Ae09a83029
+eth.getCode("0xC52cA8159E17Fb54A8F259B07B8137Ae09a83029")
+eth.getCode("0x2B1f68D6364540cD698507c4521Fb472Df8E9658")
+eth.getCode("0xC52cA8159E17Fb54A8F259B07B8137Ae09a83029")
+web3.fromWei(eth.getBalance("0xcbaf7bf7389723dffff8b40ff9fb9522e3115908"), "ether")
+eth.getCode("0x745a8d1610D4AC940350221F569338E4C93b1De6")
+web3.fromWei(eth.getBalance("0x7fce0a2ef63e9e9324fd803c1ad4598c3d54f6fd"), "ether")
+web3.fromWei(eth.getBalance("0x4a16b6a353f827073fF10740E27600B506257e6D"), "ether")
+eth.coinbase
