off-chain server run

--- a/data/new/history
+++ b/data/new/history
@@ -210,3 +210,9 @@ eth.getCode("0x745a8d1610D4AC940350221F569338E4C93b1De6")
 web3.fromWei(eth.getBalance("0x7fce0a2ef63e9e9324fd803c1ad4598c3d54f6fd"), "ether")
 web3.fromWei(eth.getBalance("0x4a16b6a353f827073fF10740E27600B506257e6D"), "ether")
 eth.coinbase
+miner.start()
+web3.fromWei(eth.getBalance("0xbf468c4e3ca324f3925f7ef3e710dce855623d42"), "ether")
+eth.getCode("0x58CD83F2ae9d11628bE3753e70564049c435c148")
+web3.fromWei(eth.getBalance("0xead255b46fb377fe8081c0bc75232a920a4c8316"), "ether")
+web3.fromWei(eth.getBalance("7e58a6de07fa27d93716a77c369a1ab07f9d1682"), "ether")
+web3.fromWei(eth.getBalance("7e58a6de07fa27d93716a77c369a1ab07f9d168"), "ether")
