--- a/data/new/history
+++ b/data/new/history
@@ -14,3 +14,12 @@ miner.stop()
 miner.start()
 miner.stop()
 miner.start()
+eth.getCode("0x594e9E0aE63f3b8B9C4e4571583a3416a8d51ae1")
+miner.start()
+eth.getCode("745a8d1610D4AC940350221F569338E4C93b1De6")
+eth.getTransactions("0x50281d2185195973275e589e37b145676a7877e914a80a43f1de440b0ca97ede")
+eth.getTransaction("0x50281d2185195973275e589e37b145676a7877e914a80a43f1de440b0ca97ede")
+eth.getTransaction("0x745a8d1610D4AC940350221F569338E4C93b1De6")
+eth.getCode("745a8d1610D4AC940350221F569338E4C93b1De6")
+miner.start()
+miner.stop()
