--- a/data/new/history
+++ b/data/new/history
@@ -23,3 +23,7 @@ eth.getTransaction("0x745a8d1610D4AC940350221F569338E4C93b1De6")
 eth.getCode("745a8d1610D4AC940350221F569338E4C93b1De6")
 miner.start()
 miner.stop()
+miner.start()
+miner.stop()
+miner.start()
+miner.stop()
